corrected resource file formatting

--- a/javascript/lingoport/locales/resources_fr.json
+++ b/javascript/lingoport/locales/resources_fr.json
@@ -1,4 +1,4 @@
-"keys": {
-  key1="Traduction du texte anglais en français",
-  key2="Une autre traduction",
+{
+  "key1": "Traduction du texte anglais en français",
+  "key2": "Une autre traduction"
 }
