--- a/csharp/lingoport/HelloWorld/locales/resources.eo.resx
+++ b/csharp/lingoport/HelloWorld/locales/resources.eo.resx
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Multi-line
-comment above the root
-end multi-line -->
-<!-- Single line comment -->
 <root>
     <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
         <xsd:element msdata:IsDataSet="true" name="root">
@@ -43,8 +39,8 @@ end multi-line -->
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-    <data name="DEMO_KEY_1" xml:space="preserve"><value>[Ţĥîš îš šöɱé ţéẋţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]</value></data>
-    <data name="DEMO_KEY_2" xml:space="preserve"><value>[Ţĥîš îš ɱöŕé ţéšţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]</value></data>
+<data name="DEMO_KEY_1" xml:space="preserve"><value>[Ţĥîš îš šöɱé ţéẋţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]</value></data>
+<data name="DEMO_KEY_2" xml:space="preserve"><value>[Ţĥîš îš ɱöŕé ţéẋţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]</value></data>
 </root>
 
 
