--- a/java/lingoport/com/lingoport/locales/resources_eo.properties
+++ b/java/lingoport/com/lingoport/locales/resources_eo.properties
@@ -1,3 +1,12 @@
-key1=[Ţĥîš îš šöɱé ţéẋţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]
-key2=[Ţĥîš îš ɱöŕé ţéšţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]
-key3=[Ţéšţ ƒöŕ Îɱþöŕţ-------- П國カ내]
+key1=
+		Ţĥîš îš šöɱé ţéẋţ îñ Û.Š. Éñĝļîšĥ
+------------ П國カ내
+	
+key2=
+		Ţĥîš îš ɱöŕé ţéšţ îñ Û.Š. Éñĝļîšĥ
+------------ П國カ내
+	
+key3=
+		Ţéšţ ƒöŕ Îɱþöŕţ
+-------- П國カ내
+	
