--- a/java/lingoport/com/lingoport/locales/resources_en_US.properties
+++ b/java/lingoport/com/lingoport/locales/resources_en_US.properties
@@ -1,2 +1,5 @@
 key1=This is some text in U.S. English
 key2=This is more test in U.S. English
+// From Guru's changes in master... moved here by hand. 
+// Merges should be back to the 'working' branch'
+key3=This is value3
