Lingoport Special Automation

--- a/java/lingoport/com/lingoport/locales/resources_eo.properties
+++ b/java/lingoport/com/lingoport/locales/resources_eo.properties
@@ -6,3 +6,9 @@ key2=
 		Ţĥîš îš ɱöŕé ţéšţ îñ Û.Š. Éñĝļîšĥ
 ------------ П國カ내
 	
+// From Guru's changes in master... moved here by hand. 
+// Merges should be back to the 'working' branch'
+key3=
+		Ţĥîš îš ṽåļûé3
+------- П國カ내
+	
