Lingoport Special Automation

--- a/java/lingoport/com/lingoport/locales/resources_eo.properties
+++ b/java/lingoport/com/lingoport/locales/resources_eo.properties
@@ -1,2 +1,12 @@
-key1=[Ţĥîš îš šöɱé ţéẋţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]
-key2=[Ţĥîš îš ɱöŕé ţéšţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]
+key1=
+		Ţĥîš îš šöɱé ţéẋţ îñ Û.Š. Éñĝļîšĥ
+------------ П國カ내
+	
+key2=
+		Ţĥîš îš ɱöŕé ţéšţ îñ Û.Š. Éñĝļîšĥ
+------------ П國カ내
+	
+key3=
+		Ţĥîš îš ṽåļûé3
+------- П國カ내
+	
