--- a/java/lingoport/com/lingoport/locales/resources_en_US.properties
+++ b/java/lingoport/com/lingoport/locales/resources_en_US.properties
@@ -2,3 +2,4 @@ key1=This is some text in U.S. English
 key2=This is more test in U.S. English
 key3=This is value3
 key4=New key pre-proxy tests
+key4=New key LRM-970.0 test
