Lingoport Pseudo-Localization: eo

--- a/csharp/lingoport/HelloWorld/locales/resources.eo.resx
+++ b/csharp/lingoport/HelloWorld/locales/resources.eo.resx
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <root>
     <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
-        <xsd:element msdata:IsDataSet="true" name="root">
+        <xsd:element name="root" msdata:IsDataSet="true">
             <xsd:complexType>
                 <xsd:choice maxOccurs="unbounded">
                     <xsd:element name="data">
                         <xsd:complexType>
                             <xsd:sequence>
-                                <xsd:element minOccurs="0" msdata:Ordinal="1" name="value" type="xsd:string" />
-                                <xsd:element minOccurs="0" msdata:Ordinal="2" name="comment" type="xsd:string" />
+                                <xsd:element minOccurs="0" name="value" msdata:Ordinal="1" type="xsd:string"></xsd:element>
+                                <xsd:element minOccurs="0" name="comment" msdata:Ordinal="2" type="xsd:string"></xsd:element>
                             </xsd:sequence>
-                            <xsd:attribute msdata:Ordinal="1" name="name" type="xsd:string" />
-                            <xsd:attribute msdata:Ordinal="3" name="type" type="xsd:string" />
-                            <xsd:attribute msdata:Ordinal="4" name="mimetype" type="xsd:string" />
+                            <xsd:attribute name="name" msdata:Ordinal="1" type="xsd:string"></xsd:attribute>
+                            <xsd:attribute name="type" msdata:Ordinal="3" type="xsd:string"></xsd:attribute>
+                            <xsd:attribute name="mimetype" msdata:Ordinal="4" type="xsd:string"></xsd:attribute>
                         </xsd:complexType>
                     </xsd:element>
                     <xsd:element name="resheader">
                         <xsd:complexType>
                             <xsd:sequence>
-                                <xsd:element minOccurs="0" msdata:Ordinal="1" name="value" type="xsd:string" />
+                                <xsd:element minOccurs="0" name="value" msdata:Ordinal="1" type="xsd:string"></xsd:element>
                             </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" use="required" />
+                            <xsd:attribute use="required" name="name" type="xsd:string"></xsd:attribute>
                         </xsd:complexType>
                     </xsd:element>
                 </xsd:choice>
@@ -39,8 +39,6 @@
     <resheader name="writer">
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
-<data name="DEMO_KEY_1" xml:space="preserve"><value>[Ţĥîš îš šöɱé ţéẋţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]</value></data>
-<data name="DEMO_KEY_2" xml:space="preserve"><value>[Ţĥîš îš ɱöŕé ţéẋţ îñ Û.Š. Éñĝļîšĥ------------ П國カ내]</value></data>
+    <data name="DEMO_KEY_1" xml:space="preserve"><value>Ţĥîš îš šöɱé ţéẋţ îñ Û.Š. Éñĝļîšĥ-------------- П國カ내</value></data>
+    <data name="DEMO_KEY_2" xml:space="preserve"><value>Ţĥîš îš ɱöŕé ţéẋţ îñ Û.Š. Éñĝļîšĥ-------------- П國カ내</value></data>
 </root>
-
-
